--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@
 
   <title>Phi Criativo</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Google Maps API -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDd2zgegMkqiigET8AmKBc8XTcYtzMnaYA"></script>
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1216721007';
+    var serviceWorkerVersion = '3760037240';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
